update(main): add price

--- a/JustJava/app/src/main/res/values/strings.xml
+++ b/JustJava/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="quantity">Quantity</string>
     <string name="order">Order</string>
     <string name="empty_string"/>
+    <string name="price">Price</string>
 </resources>
