--- a/JustJava/app/src/main/res/values/strings.xml
+++ b/JustJava/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="order">Order</string>
     <string name="empty_string"/>
     <string name="price">Price</string>
+    <string name="minus">-</string>
+    <string name="plus">+</string>
 </resources>
