--- a/JustJava/app/src/main/res/values/strings.xml
+++ b/JustJava/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="price">Price</string>
     <string name="minus">-</string>
     <string name="plus">+</string>
+    <string name="order_summary">Order Summary</string>
 </resources>
