Lesson 3B: Add Toppings with Whipped Cream checkbox

--- a/JustJava/app/src/main/res/values/strings.xml
+++ b/JustJava/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="minus">-</string>
     <string name="plus">+</string>
     <string name="order_summary">Order Summary</string>
+    <string name="toppings">Toppings</string>
+    <string name="whipped_cream">Whipped Cream</string>
 </resources>
